# Etterna2OsuDiscordBot

./: .env.example  Cargo.toml  README.md
src/: bot.rs  config.rs  main.rs
src/commands/: help.rs  mod.rs  ping.rs  rating.rs
src/embed/: rating.rs
src/handlers/: mod.rs  osu_handler.rs
src/helpers/: link.rs  mod.rs  osu.rs
src/services/: chart.rs  etterna_rating.rs  mod.rs  osu_api.rs
