[package]
name = "bot"
version = "0.1.0"
edition = "2021"

[dependencies]
serenity = "0.12.4"
tokio = { version = "1.0", features = ["full"] }
dotenv = "0.15"
anyhow = "1.0"
reqwest = { version = "0.12.22", features = ["json"] }
rosu-map = "0.2.1"
regex = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
once_cell = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
rosu-pattern-detector = "0.2.1"
chrono = { version = "0.4", features = ["serde"] }
plotters = "0.3"
image = "0.25.6"
minacalc-rs = "0.1.0"
rosu-v2 = "0.11.0"

[dev-dependencies]
pretty_assertions = "1.0"
